uptime-kuma/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: uptime-kuma-ingress
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - kuma.youtubegaming.live
    secretName: uptime-kuma-tls
  rules:
    - host: kuma.youtubegaming.live
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: uptime-kuma
                port:
                  number: 3001
